deploy/manifests/prod/us-east-2/tenant/storetheindex/dhfind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhfind
spec:
  replicas: 6
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: dhfind
          args:
            - '--dhstoreAddr=http://dhstore.internal.prod.cid.contact/'
            - '--stiAddr=http://indexstar:8080/'
          resources:
            limits:
              cpu: "2"
              memory: 512Mi
            requests:
              cpu: "2"
              memory: 512Mi
