deploy/manifests/prod/us-east-2/tenant/storetheindex/dhfind/service.yaml
# dhfind service is accessible only within K8S cluster VPC via:
#  - http://dhfind.internal.dev.cid.contact
#
# See: https://github.com/ipni/dhfind
kind: Service
apiVersion: v1
metadata:
  name: dhfind
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-042a0fcb8ae88f355
    external-dns.alpha.kubernetes.io/access: private
    external-dns.alpha.kubernetes.io/hostname: dhfind.internal.prod.cid.contact
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
